--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,3 +28,11 @@ once_cell = "1"
 wasapi = { version = "0.12", optional = false }
 crossbeam-channel = "0.5"
 cpal = { version = "0.15" }
+windows = { version = "0.54", features = [
+  "Win32_Foundation",
+  "Win32_System_Com",
+  "Win32_Media_Audio",
+  "Win32_Media_Multimedia",
+] }
+base64 = "0.21"
+reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
